[B]3.2.1[/B]
- Added capability for nested zips on vipsubs.gr
- Skip certain results not containing subtitles on vipsubs.gr

[B]3.2.0[/B]
- Bumped dependencies
- Improved cache clear function
- Added vipsubs.gr
- Lots of bug fixes

[B]3.1.X[/B]
- Tweaked regexes for searches
- Added a setting allowing users to set search and download timeouts
- Added visual feedback when deleting function cache
- Disabled subs4free.info

[B]3.0.X[/B]
- Removed subzxyz (subtitles were moved to opensubtitles.org)
- Bypassed subtitles.gr/findsubtitles.eu domain completely and removed its setting
- Added support for subs4free/subs4series, podnapisi
- Added boolean setting for each site supported
    > disable for faster searches (subs4free disabled by default)
- Applied unicode ascii normalization
- Added setting to sort subs by either subtitle name, source, rating, downloads
- Results are now cached for two hours in order to reduce subsequent requests
- Improved debug logging
- Regex pattern tweaks for queries
- Performance tweaks
- Various other tweaks

[B]2.0.Χ[/B]
- Extraction method for zip files is now performed by python library by default, kodi built-in as fallback
- Removed notification for broad search terms and tweaked various functions and regexes to allow them
- Install vfs.libarchive on Leia, whenever possible via builtin command
- Replaced subtitles.gr domain with an alternative one by default, old one kept as optional
- Sort subtitles.gr items according to rating (downloads)
- Bumped dependencies
- Various other tweaks

[B]1.6.0[/B]
- Tweaked conditionals for match on subzxyz
- Subtitles.gr:
  > requested html will now replace errors when decoding
  > query formatting is now a unicode object instead of string
  > skip items without "flags/el.gif" instead of raising exception
- Increased urls requested from subz.xyz and reversed order
- Greatly improved searches with manual queries

[B]1.5.7[/B]
- Instantiate query variable in run function